minor bug squashe on screen 2

--- a/css/screen2.css
+++ b/css/screen2.css
@@ -668,7 +668,6 @@ padding-right: 20.3125rem;
 	font-size: 1rem;
 	font-weight: 700;
 	text-align: justify;
-	padding-right: 20.3125rem;
 	padding-bottom:  10rem;
 	margin-top: 3rem;
 
